# tui-flight-tracker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/actions/setup_dependencies/: action.yml
.github/workflows/: basic_workflow.yml  ci.yml  code_linter.yml  release.yml
src/: app.py  app.tcss  formatters.py  main.py  search.py  utils.py
tests/: conftest.py  test_search.py  test_utils.py
