[project]
name = "google-flights-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "flights>=0.8.0",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "textual>=8.2.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.28",
    "mypy>=1.20.1",
    "ruff>=0.15.8",
]

[[tool.mypy.overrides]]
module = "fli.*"
ignore_missing_imports = true 