[project]
name = "tui-flight-tracker"
dynamic = ["version"]
description = "Simple flight tracker TUI using Google Flights API"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "flights>=0.8.0",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "textual>=8.2.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.28",
    "mypy>=1.20.1",
    "ruff>=0.15.8",
    "pytest>=9.0.3",
]

[[tool.mypy.overrides]]
module = "fli.*"
ignore_missing_imports = true 

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "README.md", "pyproject.toml"]
